# motion-engine

./: .gitignore  Cargo.toml  cspell.jsonc
app_core/: Cargo.toml
app_core/src/: app.rs  error.rs  lib.rs
app_core/src/hkx/: bsi_state_tagging_generator.rs  hk_base_class.rs  hk_base_object.rs  hk_referenced_object.rs  hkb_behavior_graph_string_data.rs  hkb_node.rs  hkx_vertex_buffer_vertex_data.rs  mod.rs
app_core/src/utilities/: crc32.rs
crates/hkx-serde/: Cargo.toml
crates/hkx-serde/src/: error.rs  flag_values.rs  lib.rs  parse_rpt.rs  prelude.rs
crates/hkx-serde/src/bytes/: fix_str_io.rs  hkx_class_name.rs  hkx_header.rs  hkx_section.rs  mod.rs  packfile_deserializer.rs
crates/hkx-serde/src/bytes/sections/: class_name_section.rs  mod.rs  section_contents.rs  section_fixup.rs  section_header.rs
crates/hkx-serde/src/classes/: hkb_behavior_graph_string_data.rs  hkb_variable_value.rs  hkb_variable_value_set.rs  hkx_vertex_description.rs  hkx_vertex_description_element_decl.rs  mod.rs  readme.md  root.rs
crates/hkx-serde/src/classes/tests/: hkb_behavior_graph_data.rs  hkb_behavior_graph_string_data.rs  hkb_variable_value_set.rs  mod.rs  root.rs
crates/hkx-serde/src/generators/: all_class.rs  bitflags.rs  class_params.rs  cpp_type_parser.rs  gen_class_params.rs  generate_bitflags.rs  generate_code.rs  generated_types.rs  mod.rs  one_class.rs  readme.md
crates/hkx-serde/src/generators/rust/: cpp_type_parser.rs  gen_class_params.rs  generate_code.rs  generated_types.rs  mod.rs
crates/hkx-serde/src/havok_types/: matrix3.rs  matrix4.rs  mod.rs  primitive.rs  qs_transform.rs  quaternion.rs  readme.md  vector3.rs  vector4.rs
crates/hkx-serde/src/havok_types/c_style_array/: c_style_array_class.rs  c_style_array_primitive.rs  c_style_array_vector.rs  mod.rs
crates/hkx-serde/src/havok_types/hk_array/: hk_array_c_style.rs  hk_array_class.rs  hk_array_ref.rs  hk_array_vector.rs  mod.rs
crates/hkx-serde/src/helpers/: float.rs  mod.rs  str_ext.rs  tracing.rs  vector.rs
crates/hkx-serde/src/hkxcmd_parser/: flag_values.rs  hk_types.rs  mod.rs
crates/hkx_class_generator/: .gitignore  Cargo.toml
crates/hkx_class_generator/assets/: get_rpt.py  readme.md
crates/hkx_class_generator/src/: lib.rs
crates/hkx_class_generator/src/cpp_type_parser/: cpp_type_parser_for_struct.rs  cpp_type_parser_for_xml.rs  generated_types_for_struct_fields.rs  mod.rs
crates/hkx_class_generator/src/generators/: aliases.rs  all_class.rs  bitflags.rs  class_params.rs  cpp_type_parser.rs  generate_offset.rs  lifetime_manager.rs  mod.rs  one_class.rs  readme.md  utils.rs
crates/hkx_class_generator/src/generators/one_class/: all_fields.rs  bitflags.rs  generate_enum.rs  mod.rs
crates/hkx_class_generator/src/generators/one_class/enum_tagged/: impl_deserialize.rs  mod.rs  tagged_fields.rs
crates/hkx_class_generator/src/generators/one_class/one_struct/: impl_bytes_deserialize.rs  impl_from.rs  impl_serde.rs  mod.rs  struct_fields.rs
crates/hkx_class_generator/src/generators/one_class/visitor/: mod.rs  visitor_fields.rs
crates/hkx_class_generator/src/generators_tests/: bitflags.rs  mod.rs  readme.md
crates/hkx_class_generator/src/generators_tests/snapshots/: hkx_class_generator__generators_tests__bitflags__should_generate_bitflags.snap
crates/hkx_class_generator/src/hkx2lib_parser/: mod.rs  parse_txt.rs
crates/hkx_class_generator/src/hkxcmd_parser/: flag_values.rs  hk_types.rs  mod.rs  parse_rpt.rs  readme.md  serde_helper.rs
crates/hkx_class_generator/src/reflection_generator/: generate_offset.rs  mod.rs
crates/hkx_serde/: Cargo.toml  readme.md
crates/hkx_serde/src/: error.rs  lib.rs
crates/hkx_serde/src/bytes/: deserializer.rs  hkx_header.rs  mod.rs  packfile_deserializer.rs
crates/hkx_serde/src/bytes/sections/: class_name_section.rs  section_contents.rs  section_header.rs
crates/hkx_serde/src/classes/: mod.rs  readme.md  root.rs
crates/hkx_serde/src/classes/tests/: hkb_behavior_graph_data.rs  hkb_behavior_graph_string_data.rs  hkb_variable_value.rs  hkb_variable_value_set.rs  mod.rs  root.rs
crates/hkx_serde/src/havok_types/: primitive.rs  quaternion.rs  single_class.rs  transform.rs  vector3.rs  vector4.rs
crates/hkx_serde/src/havok_types/c_style_array/: c_style_array_class.rs  c_style_array_primitive.rs  c_style_array_vector.rs
crates/hkx_serde/src/havok_types/hk_array/: hk_array_class.rs  hk_array_num.rs  hk_array_ref.rs  hk_array_string_ptr.rs  hk_array_vector.rs
crates/hkx_serde/src/helpers/: float.rs  mod.rs  number.rs  serde.rs  str_ext.rs  vector.rs
crates/hkx_serde_tracing/: Cargo.toml
crates/hkx_serde_tracing/src/: lib.rs
tests/: test.xml
