[workspace.package]
authors = [""]
version = "0.1.0"
license = ""
description = ""
repository = "https://github.com/SARDONYX-sard/tauri-nextjs-template" # Without it, the CLI CI build will error

[workspace]
members = ["app_core", "app_cli", "src-tauri", "crates/hkx-serde"]
default-members = ["app_cli"]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
allow-dirty = ["ci"]
