[package]
name = "app_core"
version.workspace = true
description = ""
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
compact_str = "0.7.1"
crc = "3.0.1"
jwalk = "0.8.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
parse_int = { version = "0.6" }
quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
rust-ini = { version = "0.20.0" }
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_json = "1.0" # Json converter
thiserror = "1.0.48" # define errors type
tokio = { version = "1.33.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
] } # Async Executor
tokio-stream = "0.1.14" # Async next() method
tracing = "0.1.40" # Logger

[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
tracing-appender = "0.2"
tracing-subscriber = "0.3.17"
