[package]
name = "hkx_serde"
version.workspace = true
description = ""
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
byteorder = "1.5"
cgmath = { version = "0.18" }
convert_case = "0.6"
erased-serde = "0.4"
indexmap = "2.2"
jwalk = { version = "0.8" }
nom = "7.1.3"
num-derive = "0.4"
num-traits = "0.2"
ordered-float = { version = "4.2.0", features = ["serde"] }
parse_int = { version = "0.6" }
quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
roxmltree = "0.19"
rust-ini = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
thiserror = "1.0" # define errors type
tokio = { version = "1.33", features = [
  "fs",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
] } # Async Executor
tracing = "0.1" # Logger
xml-doc = { version = "0.2" }

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
pretty_assertions = "1.4"
temp-dir = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
