[package]
name = "hkx_class_generator"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
convert_case = "0.6"
indexmap = "2.2"
jwalk = { version = "0.8" }
nom = "7.1.3"
num-derive = "0.4"
num-traits = "0.2"
parse_int = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
tracing = "0.1"                                    # Logger

[dev-dependencies]
hkx_serde_tracing = { path = "../hkx_serde_tracing" }
pretty_assertions = "1.4"
quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
